syntax = "proto3";

package org.openmcf.provider.kubernetes.kubernetesrookcephoperator.v1;

import "buf/validate/validate.proto";
import "org/openmcf/provider/kubernetes/kubernetesrookcephoperator/v1/spec.proto";
import "org/openmcf/provider/kubernetes/kubernetesrookcephoperator/v1/stack_outputs.proto";
import "org/openmcf/shared/metadata.proto";

// KubernetesRookCephOperator is the top-level resource representing a Rook Ceph Operator deployment on Kubernetes.
// Rook enables Ceph distributed storage to be deployed and managed on Kubernetes clusters,
// providing file, block, and object storage services.
message KubernetesRookCephOperator {
  // API version for this resource.
  string api_version = 1 [(buf.validate.field).string.const = 'kubernetes.openmcf.org/v1'];

  // Resource kind identifier.
  string kind = 2 [(buf.validate.field).string.const = 'KubernetesRookCephOperator'];

  // Metadata for the resource.
  org.openmcf.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  // Spec defines the desired state for the Rook Ceph Operator deployment.
  KubernetesRookCephOperatorSpec spec = 4 [(buf.validate.field).required = true];

  // Status reflects the observed state of the Rook Ceph Operator deployment.
  KubernetesRookCephOperatorStatus status = 5;
}

// KubernetesRookCephOperatorStatus represents the current status of the Rook Ceph Operator deployment.
message KubernetesRookCephOperatorStatus {
  // Stack outputs from the IaC deployment.
  KubernetesRookCephOperatorStackOutputs outputs = 1;
}
