syntax = "proto3";

package org.openmcf.provider.kubernetes.kubernetesrookcephoperator.v1;

import "buf/validate/validate.proto";
import "org/openmcf/provider/kubernetes/kubernetes.proto";
import "org/openmcf/provider/kubernetes/options.proto";
import "org/openmcf/provider/kubernetes/target_cluster.proto";
import "org/openmcf/shared/foreignkey/v1/foreign_key.proto";
import "org/openmcf/shared/options/options.proto";

// **KubernetesRookCephOperatorSpec** defines the configuration for deploying the Rook Ceph Operator on a Kubernetes cluster.
// Rook enables Ceph storage to be deployed and managed on Kubernetes, providing file, block, and object storage.
// This operator manages the lifecycle of Ceph clusters within Kubernetes environments.
message KubernetesRookCephOperatorSpec {
  // Target Kubernetes Cluster where the Rook Ceph Operator will be deployed.
  org.openmcf.provider.kubernetes.KubernetesClusterSelector target_cluster = 1;

  // Kubernetes Namespace where the operator will be installed.
  // Default: rook-ceph
  org.openmcf.shared.foreignkey.v1.StringValueOrRef namespace = 2 [
    (buf.validate.field).required = true,
    (org.openmcf.shared.foreignkey.v1.default_kind) = KubernetesNamespace,
    (org.openmcf.shared.foreignkey.v1.default_kind_field_path) = "spec.name"
  ];

  // Flag to indicate if the namespace should be created.
  bool create_namespace = 3;

  // The version of the Rook Ceph Operator Helm chart to deploy.
  // https://github.com/rook/rook/releases
  // Default: v1.16.6
  optional string operator_version = 4 [(org.openmcf.shared.options.default) = "v1.16.6"];

  // Whether the Helm chart should create and update CRDs.
  // WARNING: Only set to false during first deployment if managing CRDs independently.
  // Default: true
  optional bool crds_enabled = 5 [(org.openmcf.shared.options.default) = "true"];

  // The container specifications for the Rook Ceph Operator deployment.
  KubernetesRookCephOperatorSpecContainer container = 6 [(buf.validate.field).required = true];

  // CSI driver configuration for the Rook Ceph Operator.
  KubernetesRookCephOperatorCsiSpec csi = 7;
}

// **KubernetesRookCephOperatorSpecContainer** specifies the container configuration for the Rook Ceph Operator.
// It includes resource allocations for CPU and memory to ensure the operator runs efficiently.
message KubernetesRookCephOperatorSpecContainer {
  // The CPU and memory resources allocated to the Rook Ceph Operator container.
  org.openmcf.provider.kubernetes.ContainerResources resources = 1 [(org.openmcf.provider.kubernetes.default_container_resources) = {
    limits: {
      cpu: "500m"
      memory: "512Mi"
    }
    requests: {
      cpu: "200m"
      memory: "128Mi"
    }
  }];
}

// **KubernetesRookCephOperatorCsiSpec** configures the Ceph CSI drivers managed by the Rook operator.
// CSI drivers enable Kubernetes to use Ceph for persistent volume claims.
message KubernetesRookCephOperatorCsiSpec {
  // Enable the Ceph CSI RBD (block storage) driver.
  // Default: true
  optional bool enable_rbd_driver = 1 [(org.openmcf.shared.options.default) = "true"];

  // Enable the Ceph CSI CephFS (file storage) driver.
  // Default: true
  optional bool enable_cephfs_driver = 2 [(org.openmcf.shared.options.default) = "true"];

  // Disable the CSI driver entirely.
  // Set to true if you want to use an external CSI driver.
  // Default: false
  optional bool disable_csi_driver = 3 [(org.openmcf.shared.options.default) = "false"];

  // Enable host networking for CSI CephFS and RBD nodeplugins.
  // May be necessary in some network configurations where the SDN does not
  // provide access to an external cluster or there is significant drop in read/write performance.
  // Default: true
  optional bool enable_csi_host_network = 4 [(org.openmcf.shared.options.default) = "true"];

  // Number of replicas for CSI provisioner deployment.
  // Default: 2
  optional int32 provisioner_replicas = 5 [(org.openmcf.shared.options.default) = "2"];

  // Enable CSI Addons for additional CSI functionality.
  // Default: false
  optional bool enable_csi_addons = 6 [(org.openmcf.shared.options.default) = "false"];

  // Enable NFS CSI driver for NFS storage support.
  // Default: false
  optional bool enable_nfs_driver = 7 [(org.openmcf.shared.options.default) = "false"];
}
