syntax = "proto3";

package org.project_planton.provider.kubernetes.kubernetesrookcephoperator.v1;

import "org/project_planton/provider/kubernetes/kubernetesrookcephoperator/v1/api.proto";
import "org/project_planton/provider/kubernetes/provider.proto";

// KubernetesRookCephOperatorStackInput defines the inputs for the IaC modules that deploy the Rook Ceph Operator.
message KubernetesRookCephOperatorStackInput {
  // The target resource to deploy.
  KubernetesRookCephOperator target = 1;
  // Kubernetes provider configuration including credentials.
  org.project_planton.provider.kubernetes.KubernetesProviderConfig provider_config = 2;
}
