syntax = "proto3";

package org.project_planton.provider.kubernetes.kubernetesrookcephoperator.v1;

// KubernetesRookCephOperatorStackOutputs captures observable outputs from the Rook Ceph Operator deployment.
message KubernetesRookCephOperatorStackOutputs {
  // Kubernetes namespace in which the Rook Ceph Operator is deployed.
  string namespace = 1;

  // Name of the Helm release for the Rook Ceph Operator.
  string helm_release_name = 2;

  // Kubernetes service name for the Rook Ceph Operator webhook.
  string webhook_service = 3;

  // Command to setup port-forwarding to access the operator metrics.
  // Ex: kubectl port-forward svc/rook-ceph-operator -n rook-ceph 9443:9443
  string port_forward_command = 4;
}
